Add foundation and simple layout & gitignore

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1,4 +1,6 @@
 // Foundation Sass Variables Go Here!
 // More information about Foundation + Sass can be found here:
 // http://foundation.zurb.com/docs/
+$topbar-bg: #362a7f;
+
 @import 'foundation';
