--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header id="header">
-	<nav class="top-bar">
+	<nav class="top-bar" data-topbar>
 	  <ul class="title-area">
 	    <li class="name">
 	      <h1><%= link_to "831oiojin", portfolio_path %></a></h1>
@@ -8,11 +8,11 @@
 	  <section class="top-bar-section">
 	    <ul class="right">
 	      <li class="divider"></li>
-					<li><%= link_to 'Portfolio', portfolio_path %><li>
+					<li><%= link_to 'Portfolio', portfolio_path %></li>
 	      <li class="divider"></li>
-					<li><%= link_to 'Me', me_path %><li>
+					<li><%= link_to 'Me', me_path %></li>
 	      <li class="divider"></li>
-					<li><%= link_to 'Second Thought', thought_path %><li>
+					<li><%= link_to 'Second Thought', thought_path %></li>
 	    </ul>
 	  </section>
 	</nav>
